--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -6,6 +6,6 @@
 
 # MySQL DB properties
 datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-datasource.url=jdbc:mysql://localhost:3306/jasonz-prod
+datasource.url=jdbc:mysql://localhost:3306/jasonz-prod?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
 datasource.username=root
 datasource.password=p_3535252
